feature: recursos gerados durante revisao

--- a/.env
+++ b/.env
@@ -3,3 +3,4 @@ DATABASE_PORT=5432
 DATABASE_USERNAME="postgres"
 DATABASE_PASSWORD="docker"
 DATABASE_NAME="db-questionarios"
+JWT_SECRET="e1ba46759dc1501e9b4cf684df08fa17eabc955d"
